--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "node server.js",
+    "dev": "nodemon server.js",
     "watch": "npx watchify ./public/main.js -o ./public/bundle.js"
   },
   "repository": {
